# MapCoverage

./: README.md  build.sh  main.py  pyproject.toml  src_rc.py
src/: main.ui  map.html  region.ui  src.qrc
ui/: __init__.py  main.py  region.py
